# CANDCPP

./: .gitignore
candcpps/: .gitignore
clanguage/: main.c
clanguage/notes/: README.md
clanguage/notes/第1章 课程导学/: README.md
clanguage/notes/第1章 课程导学/1-1 课前必读 正在学习/: README.md
clanguage/notes/第2章 C语言必备基础/2-1 环境搭建/: README.md
clanguage/notes/第2章 C语言必备基础/2-2 第一行C语言代码【cmake工程结构】/: README.md
clanguage/notes/第2章 C语言必备基础/2-3 程序调试方法/: README.md
clanguage/notes/第2章 C语言必备基础/2-6 代码编写为什么要遵从一定的规范？/: README.md
clanguage/notes/第3章 C语言快速入门/3-3 数据类型之浮点类型【实际应用技巧】/: README.md
clanguages/: main.c  main.cpp
clanguages/include/: io_utils.h
clanguages/notes/第1章 课程导学/1-2 课程介绍与学习指南/: README.md
clanguages/notes/第2章 C语言必备基础/2-2 第一行C语言代码【cmake工程结构】/cdemo/: CMakeLists.txt  main.c
clanguages/notes/第2章 C语言必备基础/2-3 程序调试方法/cdemo/: CMakeLists.txt  main.c
clanguages/notes/第2章 C语言必备基础/2-4 C语言的代码风格【Google C CodeStyle CLion配置代码风格】/: README.md
clanguages/notes/第2章 C语言必备基础/2-4 C语言的代码风格【Google C CodeStyle CLion配置代码风格】/cdemo/: 1-main.c  2-main.c
clanguages/notes/第2章 C语言必备基础/2-5 【加餐】背景知识/: README.md
clanguages/notes/第3章 C语言快速入门/3-1 数据类型之int类型【不同系统版本差异】/: README.md
clanguages/notes/第3章 C语言快速入门/3-10 案例：猜数字的游戏/cdemo/: main.c
clanguages/notes/第3章 C语言快速入门/3-2 数据类型之char类型【常见问题解决】/: README.md
clanguages/notes/第3章 C语言快速入门/3-2 数据类型之char类型【常见问题解决】/cdemo/: main.c
clanguages/notes/第3章 C语言快速入门/3-3 数据类型之浮点类型【实际应用技巧】/: README.md
clanguages/notes/第3章 C语言快速入门/3-3 数据类型之浮点类型【实际应用技巧】/cdemo/: main.c
clanguages/notes/第3章 C语言快速入门/3-4 变量【内存地址分析】/cdemo/: main.c
clanguages/notes/第3章 C语言快速入门/3-6 运算符-1【易踩坑点】/cdemo/: main.c
clanguages/notes/第3章 C语言快速入门/3-7 运算符-2【难点突破】/cdemo/: main.c
clanguages/notes/第3章 C语言快速入门/3-8 条件分支语句/cdemo/: main.c
clanguages/notes/第3章 C语言快速入门/3-9 循环语句/cdemo/: main.c
clanguages/notes/第5章 预处理和宏/5-4 条件编译【掌握实际应用场景】/cdemo/: CMakeLists.txt  main.c
clanguages/notes/第5章 预处理和宏/5-4 条件编译【掌握实际应用场景】/cdemo/include/: factorial.h
clanguages/notes/第6章 玩转数组/6-1 数组基础【C语言设计哲学】/: README.md
(+17 files in other folders)
